--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,12 +1,21 @@
 <h1>Books</h1>
 <table>
   <tr>
-    <td></td>
-    <td>Title</td>
-    <td>Opinion</td>
+    <th></th>
+    <th>Title</th>
+    <th>Opinion</th>
   </tr>
+  <% books.each do |book| %>
   <tr>
-    <td></td>
-    <td></td>
+    <td>
+      <%= attachment_image_tag book.user, :profile_image, :fill ,60 ,60 %>
+    </td>
+    <td>
+      <%= link_to book.title, book_path(book) %>
+    </td>
+    <td>
+      <%= book.body %>
+    </td>
   </tr>
+  <% end %>
 </table>
