--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+<%= form_with model:@book do |f| %>
+<%= f.label :Title %><br>
+<%= f.text_field :title %><br>
+<%= f.label :Opinion %><br>
+<%= f.text_area :body %><br>
+<%= f.submit "Update Book" %><br
+<% end %>
+<%= link_to "Show", book_path(@book) %>
+<%= link_to "Back", books_path %>
