--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<%= render 'users/info', user: @user %>
+<%= render 'books/form', book: @book %>
+<%= render 'books/index', books: @books %> 
