--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,18 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<%= render "users/info", user: @user %>
+<%= render "form", book: @books %>
 
-@book.user_id
+<table>
+  <tr>
+    <th><h1>Book detail</h1></th>
+  </tr>
+  <tr>
+    <td>
+      <%= attachment_image_tag @book.user, :profile_image, :fill ,60 ,60 %><br />
+      <%= link_to @book.user.name, user_path %>
+    </td>
+    <td><%= link_to @book.title, book_path %></td>
+    <td><%= @book.body %></td>
+    <td><%= link_to "Edit", edit_book_path %></td>
+    <td><%= link_to "Destroy", books_path(@book), method: :delete, "data-confirm" => "本当に削除しますか" %></td>
+  </tr>
+</table>
