--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 
   <body>
     <% if user_signed_in? %>
-      <li><%= link_to "Home", class: "fas fa-home" %></li>
-      <li><%= link_to "Users", class: "fas fa-bell" %></li>
-      <li><%= link_to "Books", class: "fas fa-atlas" %></li>
+      <li><%= link_to "Home", user_path(current_user), class: "fas fa-home" %></li>
+      <li><%= link_to "Users", users_path, class: "fas fa-bell" %></li>
+      <li><%= link_to "Books", books_path,class: "fas fa-atlas" %></li>
       <li><%= link_to "Log Out", destroy_user_session_path, class: "fas fa-arrow-alt-circle-right", method: :delete %></li>
     <% else %>
       <li><%= link_to "Bookers", root_path, class: "fas fa-home" %></li>
