--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<%= render 'users/info', user: @users %>
+<%= render 'books/form', book: @book %>
+
+<h1>Users</h1>
+<table>
+  <tr>
+    <th>image</th>
+    <th>name</th>
+    <th></th>
+  </tr>
+  <tr>
+    <% @user.each do |user| %>
+    <td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: "jpg" %></td>
+    <td><%= user.name %></td>
+    <td><%= link_to "Show", user_path(user) %></td>
+    <% end %>
+  </tr>
+</table>
