--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
-<h1>User info</h1>
 <%= render 'info', user: @user %>
 <%= render 'books/form', book: @book %>
-
-@book
+<%= render 'books/index', books: @books %> 
