--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,3 @@
 <%= render 'users/info', user: @user %>
 <%= render 'books/form', book: @book %>
-<%= render 'books/index', books: @books %> 
+<%= render 'books/contents', books: @books %> 
