--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
     <% if user_signed_in? %>
+      <li><%= link_to "Bookers", root_path, class: "fas fa-home" %></li>
       <li><%= link_to "Home", user_path(current_user), class: "fas fa-home" %></li>
       <li><%= link_to "Users", users_path, class: "fas fa-bell" %></li>
       <li><%= link_to "Books", books_path,class: "fas fa-atlas" %></li>
